# ShakkiAIUCI

./: Evaluator.py  MinMaxTree.py  MiniMax.py  README.md  ShakkiAIUCI.py  Testit.py  UCI.py  pyproject.toml
documentaatio/: README.md  Testausdokumentti.md  Vaatimusmaarittely.md  Viikko1.md  Viikko2.md  Viikko3.md  Viikko4.md  Viikko5.md  Viikko6.md  viikko7.md
